<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_padding"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/globosat_play_logo"
        android:layout_marginBottom="@dimen/large_margin"/>
    
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_login_user"
            android:layout_width="match_parent"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/edt_login_pass"
            android:hint="@string/usuario" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:hint="@string/senha" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_margin"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/login"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_toStartOf="@id/btn_sign_up"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:layout_centerVertical="true"
            android:textSize="@dimen/material_text_subhead"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/sign_up" />
    </RelativeLayout>

</LinearLayout>